# python-template

./: .editorconfig  .env.dev  .gitignore  Dockerfile  LICENSE  Makefile  Pipfile  README.md  codecov.yml  coverage.lcov  docker-compose.yml  entrypoint.sh  package-lock.json  package.json  pyproject.toml  release.config.js
.github/: PULL_REQUEST_TEMPLATE.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/scripts/: bump_patch.py  bump_version.py  delete_docker_tag.py
.github/workflows/: ci-lint.yml  cleanup-pr.yml  docker-dev.yml  docker-latest.yml  docker-pr.yml  docker-release.yml  docker.yml  hotfix.yml  main.yml  release.yml
src/: main.py
src/core/: config.py  defs.py  logging.py
tests/: conftest.py  test_main.py
